# libgpkg2

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README_boost.md  boost.hpp  version.txt
.devcontainer/: Dockerfile  devcontainer.json
gpkg/: CMakeLists.txt  atomic_ops.h  binstream.c  binstream.h  blobio.c  blobio.h  boost_geom_func.cpp  boost_geom_io.cpp  boost_geom_io.hpp  boost_geom_proj.cpp  boost_geom_proj.hpp  boost_geom_wrapper.cpp  boost_geom_wrapper.hpp  boost_geometries.hpp  error.c  fp.c  geomio.c  geomio.h  gpkg.c  gpkg.h  gpkg_db.c  gpkg_geom.c  i18n.c  i18n.h  spatialdb.c  spatialdb.h  spatialdb_internal.h  sql.c  sql.h  strbuf.c  tls.h  wkb.c  wkb.h  wkt.c  wkt.h
icu/: CMakeLists.txt  README.md
shell/: CMakeLists.txt  shell.c
sqlite/: CMakeLists.txt
