# Required CMake modules
#set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")


# Set C++ version
# Make CMAKE_CXX_STANDARD available as cache option overridable by user
set(CMAKE_CXX_STANDARD 11 CACHE STRING "C++ standard version to use (default is 11)")
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# Set C version
# Make CMAKE_C_STANDARD available as cache option overridable by user
set(CMAKE_C_STANDARD 11 CACHE STRING "C standard version to use (default is 11)")
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)

set(CMAKE_C_FLAGS "-Dchar16_t=uint16_t")

add_compile_definitions(U_COMMON_IMPLEMENTATION)
add_compile_definitions(U_I18N_IMPLEMENTATION)
add_compile_definitions(U_STATIC_IMPLEMENTATION)
add_compile_definitions(U_USING_ICU_NAMESPACE=1)
add_compile_definitions(UCONFIG_NO_FILE_IO=1)
add_compile_definitions(U_NO_DEFAULT_INCLUDE_UTF_HEADERS=0)
add_compile_definitions(U_HAVE_NL_LANGINFO_CODESET=0)
add_compile_definitions(U_TIMEZONE=0)
add_compile_definitions(UCONFIG_NO_LEGACY_CONVERSION=1)
add_compile_definitions(U_ENABLE_DYLOAD=0)
add_compile_definitions(U_CHECK_DYLOAD=0)
add_compile_definitions(UCONFIG_NO_SERVICE=1)


include_directories("../lib/icu/icu4c/source/common")
include_directories("../lib/icu/icu4c/source/i18n")


# Common objects for static and shared library
set(
  ICU_SOURCE_FILES
  ../lib/icu/icu4c/source/common/appendable.cpp
  ../lib/icu/icu4c/source/common/bmpset.cpp
  ../lib/icu/icu4c/source/common/brkeng.cpp
  ../lib/icu/icu4c/source/common/brkiter.cpp
  ../lib/icu/icu4c/source/common/bytesinkutil.cpp
  ../lib/icu/icu4c/source/common/bytestream.cpp
  ../lib/icu/icu4c/source/common/bytestrie.cpp
  ../lib/icu/icu4c/source/common/bytestriebuilder.cpp
  ../lib/icu/icu4c/source/common/bytestrieiterator.cpp
  ../lib/icu/icu4c/source/common/caniter.cpp
  ../lib/icu/icu4c/source/common/characterproperties.cpp
  ../lib/icu/icu4c/source/common/chariter.cpp
  ../lib/icu/icu4c/source/common/charstr.cpp
  ../lib/icu/icu4c/source/common/cmemory.cpp
  ../lib/icu/icu4c/source/common/cstr.cpp
  ../lib/icu/icu4c/source/common/cstring.cpp
  ../lib/icu/icu4c/source/common/cwchar.cpp
  ../lib/icu/icu4c/source/common/dictbe.cpp
  ../lib/icu/icu4c/source/common/dictionarydata.cpp
  ../lib/icu/icu4c/source/common/dtintrv.cpp
  ../lib/icu/icu4c/source/common/edits.cpp
  ../lib/icu/icu4c/source/common/emojiprops.cpp
  ../lib/icu/icu4c/source/common/errorcode.cpp
  ../lib/icu/icu4c/source/common/filteredbrk.cpp
  ../lib/icu/icu4c/source/common/filterednormalizer2.cpp
  ../lib/icu/icu4c/source/common/icudataver.cpp
  ../lib/icu/icu4c/source/common/icuplug.cpp
  ../lib/icu/icu4c/source/common/loadednormalizer2impl.cpp
  ../lib/icu/icu4c/source/common/localebuilder.cpp
  ../lib/icu/icu4c/source/common/localematcher.cpp
  ../lib/icu/icu4c/source/common/localeprioritylist.cpp
  ../lib/icu/icu4c/source/common/locavailable.cpp
  ../lib/icu/icu4c/source/common/locbased.cpp
  ../lib/icu/icu4c/source/common/locdispnames.cpp
  ../lib/icu/icu4c/source/common/locdistance.cpp
  ../lib/icu/icu4c/source/common/locdspnm.cpp
  ../lib/icu/icu4c/source/common/locid.cpp
  ../lib/icu/icu4c/source/common/loclikely.cpp
  ../lib/icu/icu4c/source/common/loclikelysubtags.cpp
  ../lib/icu/icu4c/source/common/locmap.cpp
  ../lib/icu/icu4c/source/common/locresdata.cpp
  ../lib/icu/icu4c/source/common/locutil.cpp
  ../lib/icu/icu4c/source/common/lsr.cpp
  ../lib/icu/icu4c/source/common/lstmbe.cpp
  ../lib/icu/icu4c/source/common/messagepattern.cpp
  ../lib/icu/icu4c/source/common/normalizer2.cpp
  ../lib/icu/icu4c/source/common/normalizer2impl.cpp
  ../lib/icu/icu4c/source/common/normlzr.cpp
  ../lib/icu/icu4c/source/common/parsepos.cpp
  ../lib/icu/icu4c/source/common/patternprops.cpp
  ../lib/icu/icu4c/source/common/pluralmap.cpp
  ../lib/icu/icu4c/source/common/propname.cpp
  ../lib/icu/icu4c/source/common/propsvec.cpp
  ../lib/icu/icu4c/source/common/punycode.cpp
  ../lib/icu/icu4c/source/common/putil.cpp
  ../lib/icu/icu4c/source/common/rbbi.cpp
  ../lib/icu/icu4c/source/common/rbbi_cache.cpp
  ../lib/icu/icu4c/source/common/rbbidata.cpp
  ../lib/icu/icu4c/source/common/rbbinode.cpp
  ../lib/icu/icu4c/source/common/rbbirb.cpp
  ../lib/icu/icu4c/source/common/rbbiscan.cpp
  ../lib/icu/icu4c/source/common/rbbisetb.cpp
  ../lib/icu/icu4c/source/common/rbbistbl.cpp
  ../lib/icu/icu4c/source/common/rbbitblb.cpp
  ../lib/icu/icu4c/source/common/resbund.cpp
  ../lib/icu/icu4c/source/common/resbund_cnv.cpp
  ../lib/icu/icu4c/source/common/resource.cpp
  ../lib/icu/icu4c/source/common/restrace.cpp
  ../lib/icu/icu4c/source/common/ruleiter.cpp
  ../lib/icu/icu4c/source/common/schriter.cpp
  ../lib/icu/icu4c/source/common/serv.cpp
  ../lib/icu/icu4c/source/common/servlk.cpp
  ../lib/icu/icu4c/source/common/servlkf.cpp
  ../lib/icu/icu4c/source/common/servls.cpp
  ../lib/icu/icu4c/source/common/servnotf.cpp
  ../lib/icu/icu4c/source/common/servrbf.cpp
  ../lib/icu/icu4c/source/common/servslkf.cpp
  ../lib/icu/icu4c/source/common/sharedobject.cpp
  ../lib/icu/icu4c/source/common/simpleformatter.cpp
  ../lib/icu/icu4c/source/common/static_unicode_sets.cpp
  ../lib/icu/icu4c/source/common/stringpiece.cpp
  ../lib/icu/icu4c/source/common/stringtriebuilder.cpp
  ../lib/icu/icu4c/source/common/uarrsort.cpp
  ../lib/icu/icu4c/source/common/ubidi.cpp
  ../lib/icu/icu4c/source/common/ubidi_props.cpp
  ../lib/icu/icu4c/source/common/ubidiln.cpp
  ../lib/icu/icu4c/source/common/ubiditransform.cpp
  ../lib/icu/icu4c/source/common/ubidiwrt.cpp
  ../lib/icu/icu4c/source/common/ubrk.cpp
  ../lib/icu/icu4c/source/common/ucase.cpp
  ../lib/icu/icu4c/source/common/ucasemap.cpp
  ../lib/icu/icu4c/source/common/ucasemap_titlecase_brkiter.cpp
  ../lib/icu/icu4c/source/common/ucat.cpp
  ../lib/icu/icu4c/source/common/uchar.cpp
  ../lib/icu/icu4c/source/common/ucharstrie.cpp
  ../lib/icu/icu4c/source/common/ucharstriebuilder.cpp
  ../lib/icu/icu4c/source/common/ucharstrieiterator.cpp
  ../lib/icu/icu4c/source/common/uchriter.cpp
  ../lib/icu/icu4c/source/common/ucln_cmn.cpp
  ../lib/icu/icu4c/source/common/ucmndata.cpp
  ../lib/icu/icu4c/source/common/ucnv.cpp
  ../lib/icu/icu4c/source/common/ucnv2022.cpp
  ../lib/icu/icu4c/source/common/ucnv_bld.cpp
  ../lib/icu/icu4c/source/common/ucnv_cb.cpp
  ../lib/icu/icu4c/source/common/ucnv_cnv.cpp
  ../lib/icu/icu4c/source/common/ucnv_ct.cpp
  ../lib/icu/icu4c/source/common/ucnv_err.cpp
  ../lib/icu/icu4c/source/common/ucnv_ext.cpp
  ../lib/icu/icu4c/source/common/ucnv_io.cpp
  ../lib/icu/icu4c/source/common/ucnv_lmb.cpp
  ../lib/icu/icu4c/source/common/ucnv_set.cpp
  ../lib/icu/icu4c/source/common/ucnv_u16.cpp
  ../lib/icu/icu4c/source/common/ucnv_u32.cpp
  ../lib/icu/icu4c/source/common/ucnv_u7.cpp
  ../lib/icu/icu4c/source/common/ucnv_u8.cpp
  ../lib/icu/icu4c/source/common/ucnvbocu.cpp
  ../lib/icu/icu4c/source/common/ucnvdisp.cpp
  ../lib/icu/icu4c/source/common/ucnvhz.cpp
  ../lib/icu/icu4c/source/common/ucnvisci.cpp
  ../lib/icu/icu4c/source/common/ucnvlat1.cpp
  ../lib/icu/icu4c/source/common/ucnvmbcs.cpp
  ../lib/icu/icu4c/source/common/ucnvscsu.cpp
  ../lib/icu/icu4c/source/common/ucnvsel.cpp
  ../lib/icu/icu4c/source/common/ucol_swp.cpp
  ../lib/icu/icu4c/source/common/ucptrie.cpp
  ../lib/icu/icu4c/source/common/ucurr.cpp
  ../lib/icu/icu4c/source/common/udata.cpp
  ../lib/icu/icu4c/source/common/udatamem.cpp
  ../lib/icu/icu4c/source/common/udataswp.cpp
  ../lib/icu/icu4c/source/common/uenum.cpp
  ../lib/icu/icu4c/source/common/uhash.cpp
  ../lib/icu/icu4c/source/common/uhash_us.cpp
  ../lib/icu/icu4c/source/common/uidna.cpp
  ../lib/icu/icu4c/source/common/uinit.cpp
  ../lib/icu/icu4c/source/common/uinvchar.cpp
  ../lib/icu/icu4c/source/common/uiter.cpp
  ../lib/icu/icu4c/source/common/ulist.cpp
  ../lib/icu/icu4c/source/common/uloc.cpp
  ../lib/icu/icu4c/source/common/uloc_keytype.cpp
  ../lib/icu/icu4c/source/common/uloc_tag.cpp
  ../lib/icu/icu4c/source/common/umapfile.cpp
  ../lib/icu/icu4c/source/common/umath.cpp
  ../lib/icu/icu4c/source/common/umutablecptrie.cpp
  ../lib/icu/icu4c/source/common/umutex.cpp
  ../lib/icu/icu4c/source/common/unames.cpp
  ../lib/icu/icu4c/source/common/unifiedcache.cpp
  ../lib/icu/icu4c/source/common/unifilt.cpp
  ../lib/icu/icu4c/source/common/unifunct.cpp
  ../lib/icu/icu4c/source/common/uniset.cpp
  ../lib/icu/icu4c/source/common/uniset_closure.cpp
  ../lib/icu/icu4c/source/common/uniset_props.cpp
  ../lib/icu/icu4c/source/common/unisetspan.cpp
  ../lib/icu/icu4c/source/common/unistr.cpp
  ../lib/icu/icu4c/source/common/unistr_case.cpp
  ../lib/icu/icu4c/source/common/unistr_case_locale.cpp
  ../lib/icu/icu4c/source/common/unistr_cnv.cpp
  ../lib/icu/icu4c/source/common/unistr_props.cpp
  ../lib/icu/icu4c/source/common/unistr_titlecase_brkiter.cpp
  ../lib/icu/icu4c/source/common/unorm.cpp
  ../lib/icu/icu4c/source/common/unormcmp.cpp
  ../lib/icu/icu4c/source/common/uobject.cpp
  ../lib/icu/icu4c/source/common/uprops.cpp
  ../lib/icu/icu4c/source/common/ures_cnv.cpp
  ../lib/icu/icu4c/source/common/uresbund.cpp
  ../lib/icu/icu4c/source/common/uresdata.cpp
  ../lib/icu/icu4c/source/common/usc_impl.cpp
  ../lib/icu/icu4c/source/common/uscript.cpp
  ../lib/icu/icu4c/source/common/uscript_props.cpp
  ../lib/icu/icu4c/source/common/uset.cpp
  ../lib/icu/icu4c/source/common/uset_props.cpp
  ../lib/icu/icu4c/source/common/usetiter.cpp
  ../lib/icu/icu4c/source/common/ushape.cpp
  ../lib/icu/icu4c/source/common/usprep.cpp
  ../lib/icu/icu4c/source/common/ustack.cpp
  ../lib/icu/icu4c/source/common/ustr_cnv.cpp
  ../lib/icu/icu4c/source/common/ustr_titlecase_brkiter.cpp
  ../lib/icu/icu4c/source/common/ustr_wcs.cpp
  ../lib/icu/icu4c/source/common/ustrcase.cpp
  ../lib/icu/icu4c/source/common/ustrcase_locale.cpp
  ../lib/icu/icu4c/source/common/ustrenum.cpp
  ../lib/icu/icu4c/source/common/ustrfmt.cpp
  ../lib/icu/icu4c/source/common/ustring.cpp
  ../lib/icu/icu4c/source/common/ustrtrns.cpp
  ../lib/icu/icu4c/source/common/utext.cpp
  ../lib/icu/icu4c/source/common/utf_impl.cpp
  ../lib/icu/icu4c/source/common/util.cpp
  ../lib/icu/icu4c/source/common/util_props.cpp
  ../lib/icu/icu4c/source/common/utrace.cpp
  ../lib/icu/icu4c/source/common/utrie.cpp
  ../lib/icu/icu4c/source/common/utrie2.cpp
  ../lib/icu/icu4c/source/common/utrie2_builder.cpp
  ../lib/icu/icu4c/source/common/utrie_swap.cpp
  ../lib/icu/icu4c/source/common/uts46.cpp
  ../lib/icu/icu4c/source/common/utypes.cpp
  ../lib/icu/icu4c/source/common/uvector.cpp
  ../lib/icu/icu4c/source/common/uvectr32.cpp
  ../lib/icu/icu4c/source/common/uvectr64.cpp
  ../lib/icu/icu4c/source/common/wintz.cpp
  ../lib/icu/icu4c/source/i18n/alphaindex.cpp
  ../lib/icu/icu4c/source/i18n/anytrans.cpp
  ../lib/icu/icu4c/source/i18n/astro.cpp
  ../lib/icu/icu4c/source/i18n/basictz.cpp
  ../lib/icu/icu4c/source/i18n/bocsu.cpp
  ../lib/icu/icu4c/source/i18n/brktrans.cpp
  ../lib/icu/icu4c/source/i18n/buddhcal.cpp
  ../lib/icu/icu4c/source/i18n/calendar.cpp
  ../lib/icu/icu4c/source/i18n/casetrn.cpp
  ../lib/icu/icu4c/source/i18n/cecal.cpp
  ../lib/icu/icu4c/source/i18n/chnsecal.cpp
  ../lib/icu/icu4c/source/i18n/choicfmt.cpp
  ../lib/icu/icu4c/source/i18n/coleitr.cpp
  ../lib/icu/icu4c/source/i18n/coll.cpp
  ../lib/icu/icu4c/source/i18n/collation.cpp
  ../lib/icu/icu4c/source/i18n/collationbuilder.cpp
  ../lib/icu/icu4c/source/i18n/collationcompare.cpp
  ../lib/icu/icu4c/source/i18n/collationdata.cpp
  ../lib/icu/icu4c/source/i18n/collationdatabuilder.cpp
  ../lib/icu/icu4c/source/i18n/collationdatareader.cpp
  ../lib/icu/icu4c/source/i18n/collationdatawriter.cpp
  ../lib/icu/icu4c/source/i18n/collationfastlatin.cpp
  ../lib/icu/icu4c/source/i18n/collationfastlatinbuilder.cpp
  ../lib/icu/icu4c/source/i18n/collationfcd.cpp
  ../lib/icu/icu4c/source/i18n/collationiterator.cpp
  ../lib/icu/icu4c/source/i18n/collationkeys.cpp
  ../lib/icu/icu4c/source/i18n/collationroot.cpp
  ../lib/icu/icu4c/source/i18n/collationrootelements.cpp
  ../lib/icu/icu4c/source/i18n/collationruleparser.cpp
  ../lib/icu/icu4c/source/i18n/collationsets.cpp
  ../lib/icu/icu4c/source/i18n/collationsettings.cpp
  ../lib/icu/icu4c/source/i18n/collationtailoring.cpp
  ../lib/icu/icu4c/source/i18n/collationweights.cpp
  ../lib/icu/icu4c/source/i18n/compactdecimalformat.cpp
  ../lib/icu/icu4c/source/i18n/coptccal.cpp
  ../lib/icu/icu4c/source/i18n/cpdtrans.cpp
  ../lib/icu/icu4c/source/i18n/csdetect.cpp
  ../lib/icu/icu4c/source/i18n/csmatch.cpp
  ../lib/icu/icu4c/source/i18n/csr2022.cpp
  ../lib/icu/icu4c/source/i18n/csrecog.cpp
  ../lib/icu/icu4c/source/i18n/csrmbcs.cpp
  ../lib/icu/icu4c/source/i18n/csrsbcs.cpp
  ../lib/icu/icu4c/source/i18n/csrucode.cpp
  ../lib/icu/icu4c/source/i18n/csrutf8.cpp
  ../lib/icu/icu4c/source/i18n/curramt.cpp
  ../lib/icu/icu4c/source/i18n/currfmt.cpp
  ../lib/icu/icu4c/source/i18n/currpinf.cpp
  ../lib/icu/icu4c/source/i18n/currunit.cpp
  ../lib/icu/icu4c/source/i18n/dangical.cpp
  ../lib/icu/icu4c/source/i18n/datefmt.cpp
  ../lib/icu/icu4c/source/i18n/dayperiodrules.cpp
  ../lib/icu/icu4c/source/i18n/dcfmtsym.cpp
  ../lib/icu/icu4c/source/i18n/decContext.cpp
  ../lib/icu/icu4c/source/i18n/decNumber.cpp
  ../lib/icu/icu4c/source/i18n/decimfmt.cpp
  ../lib/icu/icu4c/source/i18n/double-conversion-bignum-dtoa.cpp
  ../lib/icu/icu4c/source/i18n/double-conversion-bignum.cpp
  ../lib/icu/icu4c/source/i18n/double-conversion-cached-powers.cpp
  ../lib/icu/icu4c/source/i18n/double-conversion-double-to-string.cpp
  ../lib/icu/icu4c/source/i18n/double-conversion-fast-dtoa.cpp
  ../lib/icu/icu4c/source/i18n/double-conversion-string-to-double.cpp
  ../lib/icu/icu4c/source/i18n/double-conversion-strtod.cpp
  ../lib/icu/icu4c/source/i18n/dtfmtsym.cpp
  ../lib/icu/icu4c/source/i18n/dtitvfmt.cpp
  ../lib/icu/icu4c/source/i18n/dtitvinf.cpp
  ../lib/icu/icu4c/source/i18n/dtptngen.cpp
  ../lib/icu/icu4c/source/i18n/dtrule.cpp
  ../lib/icu/icu4c/source/i18n/erarules.cpp
  ../lib/icu/icu4c/source/i18n/esctrn.cpp
  ../lib/icu/icu4c/source/i18n/ethpccal.cpp
  ../lib/icu/icu4c/source/i18n/fmtable.cpp
  ../lib/icu/icu4c/source/i18n/fmtable_cnv.cpp
  ../lib/icu/icu4c/source/i18n/format.cpp
  ../lib/icu/icu4c/source/i18n/formatted_string_builder.cpp
  ../lib/icu/icu4c/source/i18n/formattedval_iterimpl.cpp
  ../lib/icu/icu4c/source/i18n/formattedval_sbimpl.cpp
  ../lib/icu/icu4c/source/i18n/formattedvalue.cpp
  ../lib/icu/icu4c/source/i18n/fphdlimp.cpp
  ../lib/icu/icu4c/source/i18n/fpositer.cpp
  ../lib/icu/icu4c/source/i18n/funcrepl.cpp
  ../lib/icu/icu4c/source/i18n/gender.cpp
  ../lib/icu/icu4c/source/i18n/gregocal.cpp
  ../lib/icu/icu4c/source/i18n/gregoimp.cpp
  ../lib/icu/icu4c/source/i18n/hebrwcal.cpp
  ../lib/icu/icu4c/source/i18n/indiancal.cpp
  ../lib/icu/icu4c/source/i18n/inputext.cpp
  ../lib/icu/icu4c/source/i18n/islamcal.cpp
  ../lib/icu/icu4c/source/i18n/japancal.cpp
  ../lib/icu/icu4c/source/i18n/listformatter.cpp
  ../lib/icu/icu4c/source/i18n/measfmt.cpp
  ../lib/icu/icu4c/source/i18n/measunit.cpp
  ../lib/icu/icu4c/source/i18n/measunit_extra.cpp
  ../lib/icu/icu4c/source/i18n/measure.cpp
  ../lib/icu/icu4c/source/i18n/msgfmt.cpp
  ../lib/icu/icu4c/source/i18n/name2uni.cpp
  ../lib/icu/icu4c/source/i18n/nfrs.cpp
  ../lib/icu/icu4c/source/i18n/nfrule.cpp
  ../lib/icu/icu4c/source/i18n/nfsubs.cpp
  ../lib/icu/icu4c/source/i18n/nortrans.cpp
  ../lib/icu/icu4c/source/i18n/nultrans.cpp
  ../lib/icu/icu4c/source/i18n/number_affixutils.cpp
  ../lib/icu/icu4c/source/i18n/number_asformat.cpp
  ../lib/icu/icu4c/source/i18n/number_capi.cpp
  ../lib/icu/icu4c/source/i18n/number_compact.cpp
  ../lib/icu/icu4c/source/i18n/number_currencysymbols.cpp
  ../lib/icu/icu4c/source/i18n/number_decimalquantity.cpp
  ../lib/icu/icu4c/source/i18n/number_decimfmtprops.cpp
  ../lib/icu/icu4c/source/i18n/number_fluent.cpp
  ../lib/icu/icu4c/source/i18n/number_formatimpl.cpp
  ../lib/icu/icu4c/source/i18n/number_grouping.cpp
  ../lib/icu/icu4c/source/i18n/number_integerwidth.cpp
  ../lib/icu/icu4c/source/i18n/number_longnames.cpp
  ../lib/icu/icu4c/source/i18n/number_mapper.cpp
  ../lib/icu/icu4c/source/i18n/number_modifiers.cpp
  ../lib/icu/icu4c/source/i18n/number_multiplier.cpp
  ../lib/icu/icu4c/source/i18n/number_notation.cpp
  ../lib/icu/icu4c/source/i18n/number_output.cpp
  ../lib/icu/icu4c/source/i18n/number_padding.cpp
  ../lib/icu/icu4c/source/i18n/number_patternmodifier.cpp
  ../lib/icu/icu4c/source/i18n/number_patternstring.cpp
  ../lib/icu/icu4c/source/i18n/number_rounding.cpp
  ../lib/icu/icu4c/source/i18n/number_scientific.cpp
  ../lib/icu/icu4c/source/i18n/number_skeletons.cpp
  ../lib/icu/icu4c/source/i18n/number_symbolswrapper.cpp
  ../lib/icu/icu4c/source/i18n/number_usageprefs.cpp
  ../lib/icu/icu4c/source/i18n/number_utils.cpp
  ../lib/icu/icu4c/source/i18n/numfmt.cpp
  ../lib/icu/icu4c/source/i18n/numparse_affixes.cpp
  ../lib/icu/icu4c/source/i18n/numparse_compositions.cpp
  ../lib/icu/icu4c/source/i18n/numparse_currency.cpp
  ../lib/icu/icu4c/source/i18n/numparse_decimal.cpp
  ../lib/icu/icu4c/source/i18n/numparse_impl.cpp
  ../lib/icu/icu4c/source/i18n/numparse_parsednumber.cpp
  ../lib/icu/icu4c/source/i18n/numparse_scientific.cpp
  ../lib/icu/icu4c/source/i18n/numparse_symbols.cpp
  ../lib/icu/icu4c/source/i18n/numparse_validators.cpp
  ../lib/icu/icu4c/source/i18n/numrange_capi.cpp
  ../lib/icu/icu4c/source/i18n/numrange_fluent.cpp
  ../lib/icu/icu4c/source/i18n/numrange_impl.cpp
  ../lib/icu/icu4c/source/i18n/numsys.cpp
  ../lib/icu/icu4c/source/i18n/olsontz.cpp
  ../lib/icu/icu4c/source/i18n/persncal.cpp
  ../lib/icu/icu4c/source/i18n/pluralranges.cpp
  ../lib/icu/icu4c/source/i18n/plurfmt.cpp
  ../lib/icu/icu4c/source/i18n/plurrule.cpp
  ../lib/icu/icu4c/source/i18n/quant.cpp
  ../lib/icu/icu4c/source/i18n/quantityformatter.cpp
  ../lib/icu/icu4c/source/i18n/rbnf.cpp
  ../lib/icu/icu4c/source/i18n/rbt.cpp
  ../lib/icu/icu4c/source/i18n/rbt_data.cpp
  ../lib/icu/icu4c/source/i18n/rbt_pars.cpp
  ../lib/icu/icu4c/source/i18n/rbt_rule.cpp
  ../lib/icu/icu4c/source/i18n/rbt_set.cpp
  ../lib/icu/icu4c/source/i18n/rbtz.cpp
  ../lib/icu/icu4c/source/i18n/regexcmp.cpp
  ../lib/icu/icu4c/source/i18n/regeximp.cpp
  ../lib/icu/icu4c/source/i18n/regexst.cpp
  ../lib/icu/icu4c/source/i18n/regextxt.cpp
  ../lib/icu/icu4c/source/i18n/region.cpp
  ../lib/icu/icu4c/source/i18n/reldatefmt.cpp
  ../lib/icu/icu4c/source/i18n/reldtfmt.cpp
  ../lib/icu/icu4c/source/i18n/rematch.cpp
  ../lib/icu/icu4c/source/i18n/remtrans.cpp
  ../lib/icu/icu4c/source/i18n/repattrn.cpp
  ../lib/icu/icu4c/source/i18n/rulebasedcollator.cpp
  ../lib/icu/icu4c/source/i18n/scientificnumberformatter.cpp
  ../lib/icu/icu4c/source/i18n/scriptset.cpp
  ../lib/icu/icu4c/source/i18n/search.cpp
  ../lib/icu/icu4c/source/i18n/selfmt.cpp
  ../lib/icu/icu4c/source/i18n/sharedbreakiterator.cpp
  ../lib/icu/icu4c/source/i18n/simpletz.cpp
  ../lib/icu/icu4c/source/i18n/smpdtfmt.cpp
  ../lib/icu/icu4c/source/i18n/smpdtfst.cpp
  ../lib/icu/icu4c/source/i18n/sortkey.cpp
  ../lib/icu/icu4c/source/i18n/standardplural.cpp
  ../lib/icu/icu4c/source/i18n/string_segment.cpp
  ../lib/icu/icu4c/source/i18n/strmatch.cpp
  ../lib/icu/icu4c/source/i18n/strrepl.cpp
  ../lib/icu/icu4c/source/i18n/stsearch.cpp
  ../lib/icu/icu4c/source/i18n/taiwncal.cpp
  ../lib/icu/icu4c/source/i18n/timezone.cpp
  ../lib/icu/icu4c/source/i18n/titletrn.cpp
  ../lib/icu/icu4c/source/i18n/tmunit.cpp
  ../lib/icu/icu4c/source/i18n/tmutamt.cpp
  ../lib/icu/icu4c/source/i18n/tmutfmt.cpp
  ../lib/icu/icu4c/source/i18n/tolowtrn.cpp
  ../lib/icu/icu4c/source/i18n/toupptrn.cpp
  ../lib/icu/icu4c/source/i18n/translit.cpp
  ../lib/icu/icu4c/source/i18n/transreg.cpp
  ../lib/icu/icu4c/source/i18n/tridpars.cpp
  ../lib/icu/icu4c/source/i18n/tzfmt.cpp
  ../lib/icu/icu4c/source/i18n/tzgnames.cpp
  ../lib/icu/icu4c/source/i18n/tznames.cpp
  ../lib/icu/icu4c/source/i18n/tznames_impl.cpp
  ../lib/icu/icu4c/source/i18n/tzrule.cpp
  ../lib/icu/icu4c/source/i18n/tztrans.cpp
  ../lib/icu/icu4c/source/i18n/ucal.cpp
  ../lib/icu/icu4c/source/i18n/ucln_in.cpp
  ../lib/icu/icu4c/source/i18n/ucol.cpp
  ../lib/icu/icu4c/source/i18n/ucol_res.cpp
  ../lib/icu/icu4c/source/i18n/ucol_sit.cpp
  ../lib/icu/icu4c/source/i18n/ucoleitr.cpp
  ../lib/icu/icu4c/source/i18n/ucsdet.cpp
  ../lib/icu/icu4c/source/i18n/udat.cpp
  ../lib/icu/icu4c/source/i18n/udateintervalformat.cpp
  ../lib/icu/icu4c/source/i18n/udatpg.cpp
  ../lib/icu/icu4c/source/i18n/ufieldpositer.cpp
  ../lib/icu/icu4c/source/i18n/uitercollationiterator.cpp
  ../lib/icu/icu4c/source/i18n/ulistformatter.cpp
  ../lib/icu/icu4c/source/i18n/ulocdata.cpp
  ../lib/icu/icu4c/source/i18n/umsg.cpp
  ../lib/icu/icu4c/source/i18n/unesctrn.cpp
  ../lib/icu/icu4c/source/i18n/uni2name.cpp
  ../lib/icu/icu4c/source/i18n/units_complexconverter.cpp
  ../lib/icu/icu4c/source/i18n/units_converter.cpp
  ../lib/icu/icu4c/source/i18n/units_data.cpp
  ../lib/icu/icu4c/source/i18n/units_router.cpp
  ../lib/icu/icu4c/source/i18n/unum.cpp
  ../lib/icu/icu4c/source/i18n/unumsys.cpp
  ../lib/icu/icu4c/source/i18n/upluralrules.cpp
  ../lib/icu/icu4c/source/i18n/uregex.cpp
  ../lib/icu/icu4c/source/i18n/uregexc.cpp
  ../lib/icu/icu4c/source/i18n/uregion.cpp
  ../lib/icu/icu4c/source/i18n/usearch.cpp
  ../lib/icu/icu4c/source/i18n/uspoof.cpp
  ../lib/icu/icu4c/source/i18n/uspoof_build.cpp
  ../lib/icu/icu4c/source/i18n/uspoof_conf.cpp
  ../lib/icu/icu4c/source/i18n/uspoof_impl.cpp
  ../lib/icu/icu4c/source/i18n/utf16collationiterator.cpp
  ../lib/icu/icu4c/source/i18n/utf8collationiterator.cpp
  ../lib/icu/icu4c/source/i18n/utmscale.cpp
  ../lib/icu/icu4c/source/i18n/utrans.cpp
  ../lib/icu/icu4c/source/i18n/vtzone.cpp
  ../lib/icu/icu4c/source/i18n/vzone.cpp
  ../lib/icu/icu4c/source/i18n/windtfmt.cpp
  ../lib/icu/icu4c/source/i18n/winnmfmt.cpp
  ../lib/icu/icu4c/source/i18n/wintzimpl.cpp
  ../lib/icu/icu4c/source/i18n/zonemeta.cpp
  ../lib/icu/icu4c/source/i18n/zrule.cpp
  ../lib/icu/icu4c/source/i18n/ztrans.cpp
)

list(
  APPEND ICU_SOURCE_FILES
  ../lib/icu/icu4c/source/common/bmpset.h
  ../lib/icu/icu4c/source/common/brkeng.h
  ../lib/icu/icu4c/source/common/bytesinkutil.h
  ../lib/icu/icu4c/source/common/capi_helper.h
  ../lib/icu/icu4c/source/common/charstr.h
  ../lib/icu/icu4c/source/common/charstrmap.h
  ../lib/icu/icu4c/source/common/cmemory.h
  ../lib/icu/icu4c/source/common/common.rc
  ../lib/icu/icu4c/source/common/cpputils.h
  ../lib/icu/icu4c/source/common/cstr.h
  ../lib/icu/icu4c/source/common/cstring.h
  ../lib/icu/icu4c/source/common/cwchar.h
  ../lib/icu/icu4c/source/common/dictbe.h
  ../lib/icu/icu4c/source/common/dictionarydata.h
  ../lib/icu/icu4c/source/common/emojiprops.h
  ../lib/icu/icu4c/source/common/hash.h
  ../lib/icu/icu4c/source/common/icuplugimp.h
  ../lib/icu/icu4c/source/common/localeprioritylist.h
  ../lib/icu/icu4c/source/common/localsvc.h
  ../lib/icu/icu4c/source/common/locbased.h
  ../lib/icu/icu4c/source/common/locdistance.h
  ../lib/icu/icu4c/source/common/loclikelysubtags.h
  ../lib/icu/icu4c/source/common/locmap.h
  ../lib/icu/icu4c/source/common/locutil.h
  ../lib/icu/icu4c/source/common/lsr.h
  ../lib/icu/icu4c/source/common/lstmbe.h
  ../lib/icu/icu4c/source/common/messageimpl.h
  ../lib/icu/icu4c/source/common/msvcres.h
  ../lib/icu/icu4c/source/common/mutex.h
  ../lib/icu/icu4c/source/common/norm2_nfc_data.h
  ../lib/icu/icu4c/source/common/norm2allmodes.h
  ../lib/icu/icu4c/source/common/normalizer2impl.h
  ../lib/icu/icu4c/source/common/patternprops.h
  ../lib/icu/icu4c/source/common/pluralmap.h
  ../lib/icu/icu4c/source/common/propname.h
  ../lib/icu/icu4c/source/common/propname_data.h
  ../lib/icu/icu4c/source/common/propsvec.h
  ../lib/icu/icu4c/source/common/punycode.h
  ../lib/icu/icu4c/source/common/putilimp.h
  ../lib/icu/icu4c/source/common/rbbi_cache.h
  ../lib/icu/icu4c/source/common/rbbidata.h
  ../lib/icu/icu4c/source/common/rbbinode.h
  ../lib/icu/icu4c/source/common/rbbirb.h
  ../lib/icu/icu4c/source/common/rbbirpt.h
  ../lib/icu/icu4c/source/common/rbbiscan.h
  ../lib/icu/icu4c/source/common/rbbisetb.h
  ../lib/icu/icu4c/source/common/rbbitblb.h
  ../lib/icu/icu4c/source/common/resource.h
  ../lib/icu/icu4c/source/common/restrace.h
  ../lib/icu/icu4c/source/common/ruleiter.h
  ../lib/icu/icu4c/source/common/serv.h
  ../lib/icu/icu4c/source/common/servloc.h
  ../lib/icu/icu4c/source/common/servnotf.h
  ../lib/icu/icu4c/source/common/sharedobject.h
  ../lib/icu/icu4c/source/common/sprpimpl.h
  ../lib/icu/icu4c/source/common/static_unicode_sets.h
  ../lib/icu/icu4c/source/common/uarrsort.h
  ../lib/icu/icu4c/source/common/uassert.h
  ../lib/icu/icu4c/source/common/ubidi_props.h
  ../lib/icu/icu4c/source/common/ubidi_props_data.h
  ../lib/icu/icu4c/source/common/ubidiimp.h
  ../lib/icu/icu4c/source/common/ubrkimpl.h
  ../lib/icu/icu4c/source/common/ucase.h
  ../lib/icu/icu4c/source/common/ucase_props_data.h
  ../lib/icu/icu4c/source/common/ucasemap_imp.h
  ../lib/icu/icu4c/source/common/uchar_props_data.h
  ../lib/icu/icu4c/source/common/ucln.h
  ../lib/icu/icu4c/source/common/ucln_cmn.h
  ../lib/icu/icu4c/source/common/ucln_imp.h
  ../lib/icu/icu4c/source/common/ucmndata.h
  ../lib/icu/icu4c/source/common/ucnv_bld.h
  ../lib/icu/icu4c/source/common/ucnv_cnv.h
  ../lib/icu/icu4c/source/common/ucnv_ext.h
  ../lib/icu/icu4c/source/common/ucnv_imp.h
  ../lib/icu/icu4c/source/common/ucnv_io.h
  ../lib/icu/icu4c/source/common/ucnvmbcs.h
  ../lib/icu/icu4c/source/common/ucol_data.h
  ../lib/icu/icu4c/source/common/ucol_swp.h
  ../lib/icu/icu4c/source/common/ucptrie_impl.h
  ../lib/icu/icu4c/source/common/ucurrimp.h
  ../lib/icu/icu4c/source/common/udatamem.h
  ../lib/icu/icu4c/source/common/udataswp.h
  ../lib/icu/icu4c/source/common/uelement.h
  ../lib/icu/icu4c/source/common/uenumimp.h
  ../lib/icu/icu4c/source/common/uhash.h
  ../lib/icu/icu4c/source/common/uinvchar.h
  ../lib/icu/icu4c/source/common/ulayout_props.h
  ../lib/icu/icu4c/source/common/ulist.h
  ../lib/icu/icu4c/source/common/ulocimp.h
  ../lib/icu/icu4c/source/common/umapfile.h
  ../lib/icu/icu4c/source/common/umutex.h
  ../lib/icu/icu4c/source/common/unicode/appendable.h
  ../lib/icu/icu4c/source/common/unicode/brkiter.h
  ../lib/icu/icu4c/source/common/unicode/bytestream.h
  ../lib/icu/icu4c/source/common/unicode/bytestrie.h
  ../lib/icu/icu4c/source/common/unicode/bytestriebuilder.h
  ../lib/icu/icu4c/source/common/unicode/caniter.h
  ../lib/icu/icu4c/source/common/unicode/casemap.h
  ../lib/icu/icu4c/source/common/unicode/char16ptr.h
  ../lib/icu/icu4c/source/common/unicode/chariter.h
  ../lib/icu/icu4c/source/common/unicode/dbbi.h
  ../lib/icu/icu4c/source/common/unicode/docmain.h
  ../lib/icu/icu4c/source/common/unicode/dtintrv.h
  ../lib/icu/icu4c/source/common/unicode/edits.h
  ../lib/icu/icu4c/source/common/unicode/enumset.h
  ../lib/icu/icu4c/source/common/unicode/errorcode.h
  ../lib/icu/icu4c/source/common/unicode/filteredbrk.h
  ../lib/icu/icu4c/source/common/unicode/icudataver.h
  ../lib/icu/icu4c/source/common/unicode/icuplug.h
  ../lib/icu/icu4c/source/common/unicode/idna.h
  ../lib/icu/icu4c/source/common/unicode/localebuilder.h
  ../lib/icu/icu4c/source/common/unicode/localematcher.h
  ../lib/icu/icu4c/source/common/unicode/localpointer.h
  ../lib/icu/icu4c/source/common/unicode/locdspnm.h
  ../lib/icu/icu4c/source/common/unicode/locid.h
  ../lib/icu/icu4c/source/common/unicode/messagepattern.h
  ../lib/icu/icu4c/source/common/unicode/normalizer2.h
  ../lib/icu/icu4c/source/common/unicode/normlzr.h
  ../lib/icu/icu4c/source/common/unicode/parseerr.h
  ../lib/icu/icu4c/source/common/unicode/parsepos.h
  ../lib/icu/icu4c/source/common/unicode/platform.h
  ../lib/icu/icu4c/source/common/unicode/ptypes.h
  ../lib/icu/icu4c/source/common/unicode/putil.h
  ../lib/icu/icu4c/source/common/unicode/rbbi.h
  ../lib/icu/icu4c/source/common/unicode/rep.h
  ../lib/icu/icu4c/source/common/unicode/resbund.h
  ../lib/icu/icu4c/source/common/unicode/schriter.h
  ../lib/icu/icu4c/source/common/unicode/simpleformatter.h
  ../lib/icu/icu4c/source/common/unicode/std_string.h
  ../lib/icu/icu4c/source/common/unicode/strenum.h
  ../lib/icu/icu4c/source/common/unicode/stringoptions.h
  ../lib/icu/icu4c/source/common/unicode/stringpiece.h
  ../lib/icu/icu4c/source/common/unicode/stringtriebuilder.h
  ../lib/icu/icu4c/source/common/unicode/symtable.h
  ../lib/icu/icu4c/source/common/unicode/ubidi.h
  ../lib/icu/icu4c/source/common/unicode/ubiditransform.h
  ../lib/icu/icu4c/source/common/unicode/ubrk.h
  ../lib/icu/icu4c/source/common/unicode/ucasemap.h
  ../lib/icu/icu4c/source/common/unicode/ucat.h
  ../lib/icu/icu4c/source/common/unicode/uchar.h
  ../lib/icu/icu4c/source/common/unicode/ucharstrie.h
  ../lib/icu/icu4c/source/common/unicode/ucharstriebuilder.h
  ../lib/icu/icu4c/source/common/unicode/uchriter.h
  ../lib/icu/icu4c/source/common/unicode/uclean.h
  ../lib/icu/icu4c/source/common/unicode/ucnv.h
  ../lib/icu/icu4c/source/common/unicode/ucnv_cb.h
  ../lib/icu/icu4c/source/common/unicode/ucnv_err.h
  ../lib/icu/icu4c/source/common/unicode/ucnvsel.h
  ../lib/icu/icu4c/source/common/unicode/uconfig.h
  ../lib/icu/icu4c/source/common/unicode/ucpmap.h
  ../lib/icu/icu4c/source/common/unicode/ucptrie.h
  ../lib/icu/icu4c/source/common/unicode/ucurr.h
  ../lib/icu/icu4c/source/common/unicode/udata.h
  ../lib/icu/icu4c/source/common/unicode/udisplaycontext.h
  ../lib/icu/icu4c/source/common/unicode/uenum.h
  ../lib/icu/icu4c/source/common/unicode/uidna.h
  ../lib/icu/icu4c/source/common/unicode/uiter.h
  ../lib/icu/icu4c/source/common/unicode/uldnames.h
  ../lib/icu/icu4c/source/common/unicode/uloc.h
  ../lib/icu/icu4c/source/common/unicode/umachine.h
  ../lib/icu/icu4c/source/common/unicode/umisc.h
  ../lib/icu/icu4c/source/common/unicode/umutablecptrie.h
  ../lib/icu/icu4c/source/common/unicode/unifilt.h
  ../lib/icu/icu4c/source/common/unicode/unifunct.h
  ../lib/icu/icu4c/source/common/unicode/unimatch.h
  ../lib/icu/icu4c/source/common/unicode/uniset.h
  ../lib/icu/icu4c/source/common/unicode/unistr.h
  ../lib/icu/icu4c/source/common/unicode/unorm.h
  ../lib/icu/icu4c/source/common/unicode/unorm2.h
  ../lib/icu/icu4c/source/common/unicode/uobject.h
  ../lib/icu/icu4c/source/common/unicode/urename.h
  ../lib/icu/icu4c/source/common/unicode/urep.h
  ../lib/icu/icu4c/source/common/unicode/ures.h
  ../lib/icu/icu4c/source/common/unicode/uscript.h
  ../lib/icu/icu4c/source/common/unicode/uset.h
  ../lib/icu/icu4c/source/common/unicode/usetiter.h
  ../lib/icu/icu4c/source/common/unicode/ushape.h
  ../lib/icu/icu4c/source/common/unicode/usprep.h
  ../lib/icu/icu4c/source/common/unicode/ustring.h
  ../lib/icu/icu4c/source/common/unicode/ustringtrie.h
  ../lib/icu/icu4c/source/common/unicode/utext.h
  ../lib/icu/icu4c/source/common/unicode/utf.h
  ../lib/icu/icu4c/source/common/unicode/utf16.h
  ../lib/icu/icu4c/source/common/unicode/utf32.h
  ../lib/icu/icu4c/source/common/unicode/utf8.h
  ../lib/icu/icu4c/source/common/unicode/utf_old.h
  ../lib/icu/icu4c/source/common/unicode/utrace.h
  ../lib/icu/icu4c/source/common/unicode/utypes.h
  ../lib/icu/icu4c/source/common/unicode/uvernum.h
  ../lib/icu/icu4c/source/common/unicode/uversion.h
  ../lib/icu/icu4c/source/common/unifiedcache.h
  ../lib/icu/icu4c/source/common/uniquecharstr.h
  ../lib/icu/icu4c/source/common/unisetspan.h
  ../lib/icu/icu4c/source/common/unistrappender.h
  ../lib/icu/icu4c/source/common/unormimp.h
  ../lib/icu/icu4c/source/common/uposixdefs.h
  ../lib/icu/icu4c/source/common/uprops.h
  ../lib/icu/icu4c/source/common/uresdata.h
  ../lib/icu/icu4c/source/common/uresimp.h
  ../lib/icu/icu4c/source/common/ureslocs.h
  ../lib/icu/icu4c/source/common/usc_impl.h
  ../lib/icu/icu4c/source/common/uset_imp.h
  ../lib/icu/icu4c/source/common/ustr_cnv.h
  ../lib/icu/icu4c/source/common/ustr_imp.h
  ../lib/icu/icu4c/source/common/ustrenum.h
  ../lib/icu/icu4c/source/common/ustrfmt.h
  ../lib/icu/icu4c/source/common/util.h
  ../lib/icu/icu4c/source/common/utracimp.h
  ../lib/icu/icu4c/source/common/utrie.h
  ../lib/icu/icu4c/source/common/utrie2.h
  ../lib/icu/icu4c/source/common/utrie2_impl.h
  ../lib/icu/icu4c/source/common/utypeinfo.h
  ../lib/icu/icu4c/source/common/uvector.h
  ../lib/icu/icu4c/source/common/uvectr32.h
  ../lib/icu/icu4c/source/common/uvectr64.h
  ../lib/icu/icu4c/source/common/wintz.h
  ../lib/icu/icu4c/source/i18n/anytrans.h
  ../lib/icu/icu4c/source/i18n/astro.h
  ../lib/icu/icu4c/source/i18n/bocsu.h
  ../lib/icu/icu4c/source/i18n/brktrans.h
  ../lib/icu/icu4c/source/i18n/buddhcal.h
  ../lib/icu/icu4c/source/i18n/casetrn.h
  ../lib/icu/icu4c/source/i18n/cecal.h
  ../lib/icu/icu4c/source/i18n/chnsecal.h
  ../lib/icu/icu4c/source/i18n/collation.h
  ../lib/icu/icu4c/source/i18n/collationbuilder.h
  ../lib/icu/icu4c/source/i18n/collationcompare.h
  ../lib/icu/icu4c/source/i18n/collationdata.h
  ../lib/icu/icu4c/source/i18n/collationdatabuilder.h
  ../lib/icu/icu4c/source/i18n/collationdatareader.h
  ../lib/icu/icu4c/source/i18n/collationdatawriter.h
  ../lib/icu/icu4c/source/i18n/collationfastlatin.h
  ../lib/icu/icu4c/source/i18n/collationfastlatinbuilder.h
  ../lib/icu/icu4c/source/i18n/collationfcd.h
  ../lib/icu/icu4c/source/i18n/collationiterator.h
  ../lib/icu/icu4c/source/i18n/collationkeys.h
  ../lib/icu/icu4c/source/i18n/collationroot.h
  ../lib/icu/icu4c/source/i18n/collationrootelements.h
  ../lib/icu/icu4c/source/i18n/collationruleparser.h
  ../lib/icu/icu4c/source/i18n/collationsets.h
  ../lib/icu/icu4c/source/i18n/collationsettings.h
  ../lib/icu/icu4c/source/i18n/collationtailoring.h
  ../lib/icu/icu4c/source/i18n/collationweights.h
  ../lib/icu/icu4c/source/i18n/collunsafe.h
  ../lib/icu/icu4c/source/i18n/coptccal.h
  ../lib/icu/icu4c/source/i18n/cpdtrans.h
  ../lib/icu/icu4c/source/i18n/csdetect.h
  ../lib/icu/icu4c/source/i18n/csmatch.h
  ../lib/icu/icu4c/source/i18n/csr2022.h
  ../lib/icu/icu4c/source/i18n/csrecog.h
  ../lib/icu/icu4c/source/i18n/csrmbcs.h
  ../lib/icu/icu4c/source/i18n/csrsbcs.h
  ../lib/icu/icu4c/source/i18n/csrucode.h
  ../lib/icu/icu4c/source/i18n/csrutf8.h
  ../lib/icu/icu4c/source/i18n/currfmt.h
  ../lib/icu/icu4c/source/i18n/dangical.h
  ../lib/icu/icu4c/source/i18n/dayperiodrules.h
  ../lib/icu/icu4c/source/i18n/decContext.h
  ../lib/icu/icu4c/source/i18n/decNumber.h
  ../lib/icu/icu4c/source/i18n/decNumberLocal.h
  ../lib/icu/icu4c/source/i18n/double-conversion-bignum-dtoa.h
  ../lib/icu/icu4c/source/i18n/double-conversion-bignum.h
  ../lib/icu/icu4c/source/i18n/double-conversion-cached-powers.h
  ../lib/icu/icu4c/source/i18n/double-conversion-diy-fp.h
  ../lib/icu/icu4c/source/i18n/double-conversion-double-to-string.h
  ../lib/icu/icu4c/source/i18n/double-conversion-fast-dtoa.h
  ../lib/icu/icu4c/source/i18n/double-conversion-ieee.h
  ../lib/icu/icu4c/source/i18n/double-conversion-string-to-double.h
  ../lib/icu/icu4c/source/i18n/double-conversion-strtod.h
  ../lib/icu/icu4c/source/i18n/double-conversion-utils.h
  ../lib/icu/icu4c/source/i18n/double-conversion.h
  ../lib/icu/icu4c/source/i18n/dt_impl.h
  ../lib/icu/icu4c/source/i18n/dtitv_impl.h
  ../lib/icu/icu4c/source/i18n/dtptngen_impl.h
  ../lib/icu/icu4c/source/i18n/erarules.h
  ../lib/icu/icu4c/source/i18n/esctrn.h
  ../lib/icu/icu4c/source/i18n/ethpccal.h
  ../lib/icu/icu4c/source/i18n/fmtableimp.h
  ../lib/icu/icu4c/source/i18n/formatted_string_builder.h
  ../lib/icu/icu4c/source/i18n/formattedval_impl.h
  ../lib/icu/icu4c/source/i18n/fphdlimp.h
  ../lib/icu/icu4c/source/i18n/funcrepl.h
  ../lib/icu/icu4c/source/i18n/gregoimp.h
  ../lib/icu/icu4c/source/i18n/hebrwcal.h
  ../lib/icu/icu4c/source/i18n/i18n.rc
  ../lib/icu/icu4c/source/i18n/indiancal.h
  ../lib/icu/icu4c/source/i18n/inputext.h
  ../lib/icu/icu4c/source/i18n/islamcal.h
  ../lib/icu/icu4c/source/i18n/japancal.h
  ../lib/icu/icu4c/source/i18n/measunit_impl.h
  ../lib/icu/icu4c/source/i18n/msgfmt_impl.h
  ../lib/icu/icu4c/source/i18n/name2uni.h
  ../lib/icu/icu4c/source/i18n/nfrlist.h
  ../lib/icu/icu4c/source/i18n/nfrs.h
  ../lib/icu/icu4c/source/i18n/nfrule.h
  ../lib/icu/icu4c/source/i18n/nfsubs.h
  ../lib/icu/icu4c/source/i18n/nortrans.h
  ../lib/icu/icu4c/source/i18n/nultrans.h
  ../lib/icu/icu4c/source/i18n/number_affixutils.h
  ../lib/icu/icu4c/source/i18n/number_asformat.h
  ../lib/icu/icu4c/source/i18n/number_compact.h
  ../lib/icu/icu4c/source/i18n/number_currencysymbols.h
  ../lib/icu/icu4c/source/i18n/number_decimalquantity.h
  ../lib/icu/icu4c/source/i18n/number_decimfmtprops.h
  ../lib/icu/icu4c/source/i18n/number_decnum.h
  ../lib/icu/icu4c/source/i18n/number_formatimpl.h
  ../lib/icu/icu4c/source/i18n/number_longnames.h
  ../lib/icu/icu4c/source/i18n/number_mapper.h
  ../lib/icu/icu4c/source/i18n/number_microprops.h
  ../lib/icu/icu4c/source/i18n/number_modifiers.h
  ../lib/icu/icu4c/source/i18n/number_multiplier.h
  ../lib/icu/icu4c/source/i18n/number_patternmodifier.h
  ../lib/icu/icu4c/source/i18n/number_patternstring.h
  ../lib/icu/icu4c/source/i18n/number_roundingutils.h
  ../lib/icu/icu4c/source/i18n/number_scientific.h
  ../lib/icu/icu4c/source/i18n/number_skeletons.h
  ../lib/icu/icu4c/source/i18n/number_types.h
  ../lib/icu/icu4c/source/i18n/number_usageprefs.h
  ../lib/icu/icu4c/source/i18n/number_utils.h
  ../lib/icu/icu4c/source/i18n/number_utypes.h
  ../lib/icu/icu4c/source/i18n/numparse_affixes.h
  ../lib/icu/icu4c/source/i18n/numparse_compositions.h
  ../lib/icu/icu4c/source/i18n/numparse_currency.h
  ../lib/icu/icu4c/source/i18n/numparse_decimal.h
  ../lib/icu/icu4c/source/i18n/numparse_impl.h
  ../lib/icu/icu4c/source/i18n/numparse_scientific.h
  ../lib/icu/icu4c/source/i18n/numparse_symbols.h
  ../lib/icu/icu4c/source/i18n/numparse_types.h
  ../lib/icu/icu4c/source/i18n/numparse_utils.h
  ../lib/icu/icu4c/source/i18n/numparse_validators.h
  ../lib/icu/icu4c/source/i18n/numrange_impl.h
  ../lib/icu/icu4c/source/i18n/numsys_impl.h
  ../lib/icu/icu4c/source/i18n/olsontz.h
  ../lib/icu/icu4c/source/i18n/persncal.h
  ../lib/icu/icu4c/source/i18n/pluralranges.h
  ../lib/icu/icu4c/source/i18n/plurrule_impl.h
  ../lib/icu/icu4c/source/i18n/quant.h
  ../lib/icu/icu4c/source/i18n/quantityformatter.h
  ../lib/icu/icu4c/source/i18n/rbt.h
  ../lib/icu/icu4c/source/i18n/rbt_data.h
  ../lib/icu/icu4c/source/i18n/rbt_pars.h
  ../lib/icu/icu4c/source/i18n/rbt_rule.h
  ../lib/icu/icu4c/source/i18n/rbt_set.h
  ../lib/icu/icu4c/source/i18n/regexcmp.h
  ../lib/icu/icu4c/source/i18n/regexcst.h
  ../lib/icu/icu4c/source/i18n/regeximp.h
  ../lib/icu/icu4c/source/i18n/regexst.h
  ../lib/icu/icu4c/source/i18n/regextxt.h
  ../lib/icu/icu4c/source/i18n/region_impl.h
  ../lib/icu/icu4c/source/i18n/reldtfmt.h
  ../lib/icu/icu4c/source/i18n/remtrans.h
  ../lib/icu/icu4c/source/i18n/scriptset.h
  ../lib/icu/icu4c/source/i18n/selfmtimpl.h
  ../lib/icu/icu4c/source/i18n/sharedbreakiterator.h
  ../lib/icu/icu4c/source/i18n/sharedcalendar.h
  ../lib/icu/icu4c/source/i18n/shareddateformatsymbols.h
  ../lib/icu/icu4c/source/i18n/sharednumberformat.h
  ../lib/icu/icu4c/source/i18n/sharedpluralrules.h
  ../lib/icu/icu4c/source/i18n/smpdtfst.h
  ../lib/icu/icu4c/source/i18n/standardplural.h
  ../lib/icu/icu4c/source/i18n/string_segment.h
  ../lib/icu/icu4c/source/i18n/strmatch.h
  ../lib/icu/icu4c/source/i18n/strrepl.h
  ../lib/icu/icu4c/source/i18n/taiwncal.h
  ../lib/icu/icu4c/source/i18n/titletrn.h
  ../lib/icu/icu4c/source/i18n/tolowtrn.h
  ../lib/icu/icu4c/source/i18n/toupptrn.h
  ../lib/icu/icu4c/source/i18n/transreg.h
  ../lib/icu/icu4c/source/i18n/tridpars.h
  ../lib/icu/icu4c/source/i18n/tzgnames.h
  ../lib/icu/icu4c/source/i18n/tznames_impl.h
  ../lib/icu/icu4c/source/i18n/ucln_in.h
  ../lib/icu/icu4c/source/i18n/ucol_imp.h
  ../lib/icu/icu4c/source/i18n/uitercollationiterator.h
  ../lib/icu/icu4c/source/i18n/umsg_imp.h
  ../lib/icu/icu4c/source/i18n/unesctrn.h
  ../lib/icu/icu4c/source/i18n/uni2name.h
  ../lib/icu/icu4c/source/i18n/unicode/alphaindex.h
  ../lib/icu/icu4c/source/i18n/unicode/basictz.h
  ../lib/icu/icu4c/source/i18n/unicode/calendar.h
  ../lib/icu/icu4c/source/i18n/unicode/choicfmt.h
  ../lib/icu/icu4c/source/i18n/unicode/coleitr.h
  ../lib/icu/icu4c/source/i18n/unicode/coll.h
  ../lib/icu/icu4c/source/i18n/unicode/compactdecimalformat.h
  ../lib/icu/icu4c/source/i18n/unicode/curramt.h
  ../lib/icu/icu4c/source/i18n/unicode/currpinf.h
  ../lib/icu/icu4c/source/i18n/unicode/currunit.h
  ../lib/icu/icu4c/source/i18n/unicode/datefmt.h
  ../lib/icu/icu4c/source/i18n/unicode/dcfmtsym.h
  ../lib/icu/icu4c/source/i18n/unicode/decimfmt.h
  ../lib/icu/icu4c/source/i18n/unicode/dtfmtsym.h
  ../lib/icu/icu4c/source/i18n/unicode/dtitvfmt.h
  ../lib/icu/icu4c/source/i18n/unicode/dtitvinf.h
  ../lib/icu/icu4c/source/i18n/unicode/dtptngen.h
  ../lib/icu/icu4c/source/i18n/unicode/dtrule.h
  ../lib/icu/icu4c/source/i18n/unicode/fieldpos.h
  ../lib/icu/icu4c/source/i18n/unicode/fmtable.h
  ../lib/icu/icu4c/source/i18n/unicode/format.h
  ../lib/icu/icu4c/source/i18n/unicode/formattedvalue.h
  ../lib/icu/icu4c/source/i18n/unicode/fpositer.h
  ../lib/icu/icu4c/source/i18n/unicode/gender.h
  ../lib/icu/icu4c/source/i18n/unicode/gregocal.h
  ../lib/icu/icu4c/source/i18n/unicode/listformatter.h
  ../lib/icu/icu4c/source/i18n/unicode/measfmt.h
  ../lib/icu/icu4c/source/i18n/unicode/measunit.h
  ../lib/icu/icu4c/source/i18n/unicode/measure.h
  ../lib/icu/icu4c/source/i18n/unicode/msgfmt.h
  ../lib/icu/icu4c/source/i18n/unicode/nounit.h
  ../lib/icu/icu4c/source/i18n/unicode/numberformatter.h
  ../lib/icu/icu4c/source/i18n/unicode/numberrangeformatter.h
  ../lib/icu/icu4c/source/i18n/unicode/numfmt.h
  ../lib/icu/icu4c/source/i18n/unicode/numsys.h
  ../lib/icu/icu4c/source/i18n/unicode/plurfmt.h
  ../lib/icu/icu4c/source/i18n/unicode/plurrule.h
  ../lib/icu/icu4c/source/i18n/unicode/rbnf.h
  ../lib/icu/icu4c/source/i18n/unicode/rbtz.h
  ../lib/icu/icu4c/source/i18n/unicode/regex.h
  ../lib/icu/icu4c/source/i18n/unicode/region.h
  ../lib/icu/icu4c/source/i18n/unicode/reldatefmt.h
  ../lib/icu/icu4c/source/i18n/unicode/scientificnumberformatter.h
  ../lib/icu/icu4c/source/i18n/unicode/search.h
  ../lib/icu/icu4c/source/i18n/unicode/selfmt.h
  ../lib/icu/icu4c/source/i18n/unicode/simpletz.h
  ../lib/icu/icu4c/source/i18n/unicode/smpdtfmt.h
  ../lib/icu/icu4c/source/i18n/unicode/sortkey.h
  ../lib/icu/icu4c/source/i18n/unicode/stsearch.h
  ../lib/icu/icu4c/source/i18n/unicode/tblcoll.h
  ../lib/icu/icu4c/source/i18n/unicode/timezone.h
  ../lib/icu/icu4c/source/i18n/unicode/tmunit.h
  ../lib/icu/icu4c/source/i18n/unicode/tmutamt.h
  ../lib/icu/icu4c/source/i18n/unicode/tmutfmt.h
  ../lib/icu/icu4c/source/i18n/unicode/translit.h
  ../lib/icu/icu4c/source/i18n/unicode/tzfmt.h
  ../lib/icu/icu4c/source/i18n/unicode/tznames.h
  ../lib/icu/icu4c/source/i18n/unicode/tzrule.h
  ../lib/icu/icu4c/source/i18n/unicode/tztrans.h
  ../lib/icu/icu4c/source/i18n/unicode/ucal.h
  ../lib/icu/icu4c/source/i18n/unicode/ucol.h
  ../lib/icu/icu4c/source/i18n/unicode/ucoleitr.h
  ../lib/icu/icu4c/source/i18n/unicode/ucsdet.h
  ../lib/icu/icu4c/source/i18n/unicode/udat.h
  ../lib/icu/icu4c/source/i18n/unicode/udateintervalformat.h
  ../lib/icu/icu4c/source/i18n/unicode/udatpg.h
  ../lib/icu/icu4c/source/i18n/unicode/ufieldpositer.h
  ../lib/icu/icu4c/source/i18n/unicode/uformattable.h
  ../lib/icu/icu4c/source/i18n/unicode/uformattedvalue.h
  ../lib/icu/icu4c/source/i18n/unicode/ugender.h
  ../lib/icu/icu4c/source/i18n/unicode/ulistformatter.h
  ../lib/icu/icu4c/source/i18n/unicode/ulocdata.h
  ../lib/icu/icu4c/source/i18n/unicode/umsg.h
  ../lib/icu/icu4c/source/i18n/unicode/unirepl.h
  ../lib/icu/icu4c/source/i18n/unicode/unounclass.h
  ../lib/icu/icu4c/source/i18n/unicode/unum.h
  ../lib/icu/icu4c/source/i18n/unicode/unumberformatter.h
  ../lib/icu/icu4c/source/i18n/unicode/unumberrangeformatter.h
  ../lib/icu/icu4c/source/i18n/unicode/unumsys.h
  ../lib/icu/icu4c/source/i18n/unicode/upluralrules.h
  ../lib/icu/icu4c/source/i18n/unicode/uregex.h
  ../lib/icu/icu4c/source/i18n/unicode/uregion.h
  ../lib/icu/icu4c/source/i18n/unicode/ureldatefmt.h
  ../lib/icu/icu4c/source/i18n/unicode/usearch.h
  ../lib/icu/icu4c/source/i18n/unicode/uspoof.h
  ../lib/icu/icu4c/source/i18n/unicode/utmscale.h
  ../lib/icu/icu4c/source/i18n/unicode/utrans.h
  ../lib/icu/icu4c/source/i18n/unicode/vtzone.h
  ../lib/icu/icu4c/source/i18n/units_complexconverter.h
  ../lib/icu/icu4c/source/i18n/units_converter.h
  ../lib/icu/icu4c/source/i18n/units_data.h
  ../lib/icu/icu4c/source/i18n/units_router.h
  ../lib/icu/icu4c/source/i18n/uspoof_conf.h
  ../lib/icu/icu4c/source/i18n/uspoof_impl.h
  ../lib/icu/icu4c/source/i18n/usrchimp.h
  ../lib/icu/icu4c/source/i18n/utf16collationiterator.h
  ../lib/icu/icu4c/source/i18n/utf8collationiterator.h
  ../lib/icu/icu4c/source/i18n/vzone.h
  ../lib/icu/icu4c/source/i18n/windtfmt.h
  ../lib/icu/icu4c/source/i18n/winnmfmt.h
  ../lib/icu/icu4c/source/i18n/wintzimpl.h
  ../lib/icu/icu4c/source/i18n/zonemeta.h
  ../lib/icu/icu4c/source/i18n/zrule.h
  ../lib/icu/icu4c/source/i18n/ztrans.h
)

# Static library of libicu
add_library(icu_static STATIC ${ICU_SOURCE_FILES})

set_target_properties(icu_static PROPERTIES COMPILE_DEFINITIONS "U_USING_ICU_NAMESPACE=1")
set_target_properties(icu_static PROPERTIES OUTPUT_NAME "icu")


include_directories(${CMAKE_CURRENT_BINARY_DIR})


# # Compiler specific settings
# if(${CMAKE_C_COMPILER_ID} MATCHES "GNU" OR ${CMAKE_C_COMPILER_ID} MATCHES "Clang")
#   add_definitions(-DICU_EXPORT=__attribute__\(\(visibility\("default"\)\)\))
#   set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fvisibility=hidden -std=c99 -pedantic -Wall -Wno-unused-variable")
#   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fvisibility=hidden -std=c++11 -pedantic -Wall -Wno-unused-variable")
# endif()

# if (MSVC)
#   add_definitions(-DGPKG_CALL=__cdecl)
#   set_target_properties(gpkg_ext PROPERTIES COMPILE_DEFINITIONS "ICU_EXPORT=__declspec\(dllexport\)")
#   set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /TP")
# endif()
